--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,12 +1,19 @@
 spring:
   application:
     name: user-service
+  jackson:
+    default-property-inclusion: NON_NULL
   config:
     import: optional:.env[.properties]
   datasource:
-    url: ${SPRING_DATASOURCE_URL}
+    url: ${SPRING_JDBC_URL}
     username: ${SPRING_DATASOURCE_USERNAME}
     password: ${SPRING_DATASOURCE_PASSWORD}
+  liquibase:
+    enabled: true
+    change-log: classpath:db/changelog/db.changelog-master.yaml
+    default-schema: ${SPRING_LIQUIBASE_DEFAULT-SCHEMA}
+    url: ${SPRING_JDBC_URL}
 server:
   port: 0
 
@@ -16,6 +23,7 @@ eureka:
       defaultZone: ${EUREKA_CLIENT_SERVICE-URL}
   instance:
     prefer-ip-address: true
+
 
 mybatis:
   config-location: classpath:db/mybatis/mybatis-config.xml
